--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,7 @@ footer{
   align-items: center;
   flex-flow: row wrap;
 
+
 } 
 
 header{
@@ -114,11 +115,12 @@ header .content-wrapper{
 
 .content-wrapper{
   width: 90%;
+  margin: 50px 0;
 
 }
 
 .header-divider{
-  width: 50%;
+  width: 45%;
 }
 
 header nav{
@@ -133,12 +135,15 @@ header nav{
 header nav ul{
   display: flex;
   justify-content: space-around;
-  width: 45%;
+  width: 100%;
 }
 
 footer .content-wrapper{
-  width: 55%;
+  width: 100%;
   margin: 50px 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 
 }
 
