--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,12 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+.content-wrapper{
+  width: 90%;
+  margin: 50px 0;
+
+}
+
 /*---------- Base Header - Footer Styles ----------*/
 
 header,
@@ -95,7 +101,6 @@ footer{
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-
 
 } 
 
@@ -109,18 +114,15 @@ header .content-wrapper{
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  flex-direction: column;
-
-}
-
-.content-wrapper{
-  width: 90%;
-  margin: 50px 0;
+  margin: 0;
 
 }
 
 .header-divider{
-  width: 45%;
+  width: 100%;
+  height: 1px;
+  margin: 10px 0 20px 0;
+
 }
 
 header nav{
@@ -138,12 +140,24 @@ header nav ul{
   width: 100%;
 }
 
-footer .content-wrapper{
-  width: 100%;
-  margin: 50px 0;
-  display: flex;
-  align-items: center;
+footer{
   flex-direction: column;
+  
+}
+
+footer p{
+  margin: 0;
+
+}
+
+footer .content-wrapper{
+  width: 55%;
+  margin: 50px 0;
+  
+}
+
+footer .contact{
+  margin-bottom: 50px;
 
 }
 
@@ -159,6 +173,10 @@ footer .social-icons p{
   justify-content: center;
   align-items: center;
 
+}
+
+footer .copyright{
+  margin: 20px 0;
 }
 
 /*---------- Mobile Styles - Homepage ----------*/
@@ -189,6 +207,16 @@ aside{
 
 }
 
+.features h2{
+  margin-bottom: 60px;
+}
+
+.features article{
+  width: 63%;
+  margin: 30px 0;
+
+}
+
 .features .features-items{
   display: flex;
   justify-content: center;
@@ -197,8 +225,9 @@ aside{
 
 }
 
-.features article{
-  width: 55%;
+.features p{
+  margin: 0;
+
 }
 
 /* Reviews */
@@ -210,9 +239,16 @@ aside{
 
 }
 
-.reviews h3{
-  width: 50%;
+.reviews h2{
+  margin-bottom: 40px;
 }
+
+.reviews h3{
+  width: 55%;
+  margin: 20px 0;
+
+}
+
 /*---------- Mobile Styles - About Page ----------*/
 
 .mission{
@@ -231,6 +267,11 @@ aside{
 
 }
 
+.contact-content p{
+  margin: 0;
+
+}
+
 /*---------- Mobile Styles - FAQ Page ----------*/
 
 .faq{
@@ -242,12 +283,21 @@ aside{
 }
 
 .faq .content-wrapper{
+  margin: 50px 0 0 0;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
 }
 
+.faq h2{
+  margin-bottom: 40px;
+} 
+
+.faq-content {
+  margin-bottom: 50px;
+  
+}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
