--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,67 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/* General Styles */
+
+html{
+  font-size: 16px;
+
+}
+
+body{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1em;
+  text-align: left;
+
+}
+
+ul,
+ol{
+  list-style-type: none;
+
+}
+
+a{
+  color: #e2e3ed;
+  text-decoration: none;
+
+}
+
+h2{
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.875em;
+
+}
+
+h3,
+h4{
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.125em;
+  margin: 20px 0;
+
+}
+
+p{
+  font-size: 0.875em;
+  line-height: 1.285;
+
+
+}
+
+img{
+
+
+}
+
+figure{
+
+}
+
+address{
+  font-style: normal;
+
+}
+
 .content-wrapper{
   width: 90%;
   margin: 50px 0;
@@ -138,7 +199,7 @@ header nav ul{
   display: flex;
   justify-content: space-around;
   width: 100%;
-  list-style-type: none;
+  
 }
 
 footer{
@@ -532,11 +593,6 @@ footer .copyright{
 /*-------------------------------- FAQ Page -------------------------*/
 
 
-header{
-  padding: 15px 0;
-
-}
-
 .faq .content-wrapper{
   justify-content: space-between;
 
@@ -559,8 +615,12 @@ header{
 
   /*Desktop styles here*/
 
+  header{
+    padding: 15px 0;
+  }
+
   .content-wrapper{
-    width: 960px;
+    max-width: 960px;
 
   }
 
@@ -574,7 +634,7 @@ header{
   /* Aside */
 
   aside .content-wrapper{
-    justify-content: space-between;
+    justify-content: space-around;
 
   }
 
@@ -606,8 +666,8 @@ header{
 
 .mission h2, 
 .contact-section .content-wrapper h2{
-
   width: 95%;
+  
 }
 
 
