--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,7 @@ body{
   font-family: 'Open Sans', sans-serif;
   font-size: 1em;
   text-align: left;
+  color: #e2e3ed;
 
 }
 
@@ -113,9 +114,11 @@ a{
 
 }
 
+
 h2{
   font-family: 'Poppins', sans-serif;
   font-size: 1.875em;
+  font-weight: lighter;
 
 }
 
@@ -124,6 +127,7 @@ h4{
   font-family: 'Poppins', sans-serif;
   font-size: 1.125em;
   margin: 20px 0;
+  font-weight: normal;
 
 }
 
@@ -154,10 +158,12 @@ address{
 
 }
 
+
 /*---------- Base Header - Footer Styles ----------*/
 
 header,
 footer{
+  background-color: #202322;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -183,6 +189,7 @@ header .content-wrapper{
   width: 100%;
   height: 1px;
   margin: 10px 0 20px 0;
+  background: #3a3a3a;
 
 }
 
@@ -192,6 +199,9 @@ header nav{
   align-items: center;
   flex-flow: row wrap;
   width: 60%;
+  font-size: 1.125em;
+  font-weight: normal;
+  text-transform: uppercase;
 
 }
 
@@ -202,8 +212,14 @@ header nav ul{
   
 }
 
+header nav ul li{
+  font-size: 1.125em;
+
+}
+
 footer{
   flex-direction: column;
+  text-align: center;
   
 }
 
@@ -250,6 +266,14 @@ footer .copyright{
 
 }
 
+.hero-area h1{
+  font-weight: normal;
+  font-size: 2.25em;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  line-height: 1.2;
+
+}
+
 /* Aside */
 
 aside{
@@ -257,6 +281,37 @@ aside{
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #527158;
+
+}
+
+aside .form{
+  margin-top: 30px;
+
+}
+ 
+input[type=text]{
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+  padding: 1em;
+  color: #e2e3ed;
+
+}
+ 
+input[type=button]{
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
 
 }
 
@@ -288,6 +343,7 @@ aside{
 }
 
 .features p{
+  text-align: center;
   margin: 0;
 
 }
@@ -298,11 +354,14 @@ aside{
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background-color: #2a423a;
 
 }
 
 .reviews h2{
   margin-bottom: 40px;
+  line-height: 1;
+
 }
 
 .reviews h3{
@@ -318,6 +377,7 @@ aside{
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #527158;
 
 }
 
@@ -326,6 +386,7 @@ aside{
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #2a423a;
 
 }
 
@@ -341,6 +402,7 @@ aside{
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #527158;
 
 }
 
@@ -354,11 +416,16 @@ aside{
 
 .faq h2{
   margin-bottom: 40px;
+  line-height: 1;
 } 
 
 .faq-content {
   margin-bottom: 50px;
 
+}
+
+.faq-content h4{
+  line-height: 1.333;
 }
 /* ==========================================================================
    Helper classes
@@ -452,9 +519,22 @@ aside{
   /*Tablet styles here*/
 
  /* General Styles */
+ 
  .content-wrapper{
   max-width: 640px;
   margin: 100px 0;
+
+}
+
+h2{
+  font-size: 2.25em;
+  line-height: 1.333;
+
+}
+
+h3{
+  font-size: 1.5em;
+  line-height: 1.25;
 
 }
 
@@ -469,6 +549,11 @@ header{
 header .content-wrapper{
   width: 100%;
   justify-content: space-between;
+
+}
+
+header figure{
+  width: 30%;
 
 }
 
@@ -489,6 +574,13 @@ header nav ul{
 
 /* Hero Area */
 
+.hero-area h1{
+  font-size: 3em;
+  line-height: 1;
+  margin: 0;
+
+}
+
 /* Aside */
 
 aside .content-wrapper{
@@ -508,6 +600,11 @@ aside .content-wrapper .form{
 
 /* Features */
 
+.features h2{
+  margin-bottom: 20px;
+
+}
+
 .features article{
   display: flex;
   justify-content: center;
@@ -518,7 +615,7 @@ aside .content-wrapper .form{
 }
 
 .features .features-item-description{
-  width: 60%;
+  width: 62%;
 
 }
 
@@ -530,8 +627,19 @@ aside .content-wrapper .form{
 
 }
 
+.reviews h2{
+  width: 85%;
+
+}
+
 .reviews article div{
-  width: 48%;
+  width: 49%;
+
+}
+
+.reviews h3{
+  width: 75%;
+  margin: 0;
 
 }
 
@@ -543,10 +651,11 @@ footer .content-wrapper{
 
 }
 
-.footer-content {
+footer.footer-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-direction: row;
 
 }
 
@@ -555,12 +664,20 @@ footer .contact{
 
 }
 
+footer h4{
+  font-size: 1.5em;
+  margin-bottom: 40px;
+
+}
+
+footer p{
+  line-height: 1.285;
+
+}
+
 footer .copyright{
   width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
+ 
 }
 
 /*---------------------------------- About Page ----------------------------*/
@@ -590,6 +707,12 @@ footer .copyright{
 
 }
 
+.contact-content h4{
+  font-size: 1.5em;
+
+}
+
+
 /*-------------------------------- FAQ Page -------------------------*/
 
 
@@ -608,6 +731,12 @@ footer .copyright{
 
 }
 
+.faq h4, .faq p{
+  font-size: .875em;
+  line-height: 1.125;
+
+}
+
 }
 
 
@@ -617,6 +746,7 @@ footer .copyright{
 
   header{
     padding: 15px 0;
+
   }
 
   .content-wrapper{
@@ -624,10 +754,27 @@ footer .copyright{
 
   }
 
+  h2{
+    font-size: 2.25em;
+
+  }
+
+  h3,h4{
+    font-size: 1.875em;
+
+  }
+
+  p{
+    font-size: 1.125em;
+    line-height: 1.333;
+
+  }
+
   /* Hero */
 
   .hero-area h1{
     width: 60%;
+    font-size: 3.75em;
 
   }
 
@@ -644,11 +791,17 @@ footer .copyright{
 
   }
 
+  .form-description p{
+    font-size: 1.125em;
+
+  }
+
 
   /* Features */
 
-  .features h2{
+.features h2{
     width: 90%;
+
   }
 
 .features article{
@@ -660,6 +813,17 @@ footer .copyright{
 
 .reviews article div{
   width: 42%;
+
+}
+
+.reviews h2{
+  padding-bottom: 50px;
+
+}
+
+footer h4{
+  font-size: 1.875em;
+
 }
 
 /*------------------------- About Page --------------------*/
@@ -667,16 +831,28 @@ footer .copyright{
 .mission h2, 
 .contact-section .content-wrapper h2{
   width: 95%;
-  
+  font-size: 3em;
+
 }
 
+.contact-content h4{
+  font-size: 1.875em;
+
+}
 
 /*-------------------------- FAQ Page -------------------------*/
 
 .faq h2{
   width: 100%;
+  font-size: 3em;
+
 }
 
+.faq h4, .faq p{
+  font-size: 1.125em;
+  line-height: 1;
+
+} 
 }
 /* ==========================================================================
    Print styles.
