--- a/css/main.css
+++ b/css/main.css
@@ -148,11 +148,12 @@ p{
 }
 
 img{
-
+  width: 100%;
 
 }
 
 figure{
+  margin: 0;
 
 }
 
@@ -184,6 +185,7 @@ header{
   padding: 15px 0;
 
 }
+
 header figure{
   width: 60%;
   display: flex;
@@ -191,6 +193,7 @@ header figure{
   align-items: center;
   flex-flow: row wrap;
 }
+
 header .content-wrapper{
   display: flex;
   justify-content: center;
@@ -280,6 +283,8 @@ footer .copyright{
   flex-flow: row wrap;
   background: url('../img/top-hero-img.jpg') center no-repeat #333;
   background-size: cover;
+  background-position: center;
+  min-height: 500px;
 
 }
 
@@ -369,6 +374,7 @@ input[type=button]{
 
 /* Reviews */
 
+
 .reviews{
   display: flex;
   justify-content: center;
@@ -382,6 +388,7 @@ input[type=button]{
   line-height: 1;
 
 }
+
 
 .reviews h3{
   width: 55%;
@@ -593,6 +600,11 @@ header nav ul{
 
 /* Hero Area */
 
+.hero-area{
+  min-height: 600px;
+  
+}
+
 .hero-area h1{
   font-size: 3em;
   line-height: 1;
@@ -624,6 +636,7 @@ aside .content-wrapper .form{
 
 }
 
+
 .features article{
   display: flex;
   justify-content: center;
@@ -651,8 +664,10 @@ aside .content-wrapper .form{
 
 }
 
+
+.reviews article figure,
 .reviews article div{
-  width: 49%;
+  width: 48%;
 
 }
 
