--- a/css/main.css
+++ b/css/main.css
@@ -101,16 +101,6 @@ body {
   color: #e2e3ed;
 }
 
-img {
-  width: 100%;
-
-}
-
-figure {
-  margin: 0;
-
-}
-
 ul,
 ol{
   list-style-type: none;
@@ -143,7 +133,6 @@ h4{
 p{
   font-size: 0.875em;
   line-height: 1.285;
-
 
 }
 
@@ -186,20 +175,21 @@ header{
 
 }
 
-header figure{
-  width: 60%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
-}
-
 header .content-wrapper{
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
   margin: 0;
+
+}
+
+header figure{
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 
 }
 
@@ -318,7 +308,6 @@ input[type=text]{
   color: #2a423a;
   font-style: italic;
   padding: 1em;
-  color: #e2e3ed;
 
 }
  
@@ -345,6 +334,7 @@ input[type=button]{
   flex-flow: row wrap;
   background: url('../img/features-background-img.jpg') center no-repeat #333;
   background-size: cover;
+  background-position: center;
 
 }
 
@@ -549,7 +539,6 @@ input[type=button]{
  .content-wrapper{
   max-width: 640px;
   margin: 100px 0;
-
 }
 
 h2{
@@ -635,7 +624,6 @@ aside .content-wrapper .form{
   margin-bottom: 20px;
 
 }
-
 
 .features article{
   display: flex;
@@ -765,7 +753,8 @@ footer .copyright{
 
 }
 
-.faq h4, .faq p{
+.faq h4, 
+.faq p{
   font-size: .875em;
   line-height: 1.125;
 
@@ -793,7 +782,8 @@ footer .copyright{
 
   }
 
-  h3,h4{
+  h3,
+  h4{
     font-size: 1.875em;
 
   }
@@ -807,7 +797,7 @@ footer .copyright{
   /* Hero */
 
   .hero-area h1{
-    width: 60%;
+    width: 82%;
     font-size: 3.75em;
 
   }
@@ -882,7 +872,8 @@ footer h4{
 
 }
 
-.faq h4, .faq p{
+.faq h4, 
+.faq p{
   font-size: 1.125em;
   line-height: 1;
 
