--- a/css/main.css
+++ b/css/main.css
@@ -397,6 +397,23 @@ input[type=button]{
 
 }
 
+.map figure{
+  position: relative;
+  padding-bottom: 125%;
+  height: 0;
+  width: 100%;
+  overflow: hidden;
+
+}
+
+.map iframe{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .contact-section{
   display: flex;
   justify-content: center;
