--- a/css/main.css
+++ b/css/main.css
@@ -734,6 +734,11 @@ footer .copyright{
 
 }
 
+.map figure{
+  padding-bottom: 45%;
+
+}
+
 .contact-section .content-wrapper h2{
   width: 80%;
 
@@ -878,6 +883,11 @@ footer h4{
 
 .contact-content h4{
   font-size: 1.875em;
+
+}
+
+.map figure{
+  padding-bottom: 38%;
 
 }
 
