--- a/css/main.css
+++ b/css/main.css
@@ -206,7 +206,7 @@ header nav{
   justify-content: space-around;
   align-items: center;
   flex-flow: row wrap;
-  width: 90%;
+  width: 60%;
   font-size: 1.125em;
   font-weight: normal;
   text-transform: uppercase;
@@ -217,6 +217,7 @@ header nav ul{
   display: flex;
   justify-content: space-around;
   width: 100%;
+
   
 }
 
@@ -613,6 +614,7 @@ header nav{
 
 header nav ul{
   justify-content: space-between;
+  padding-left: 0;
 
 }
 
