--- a/css/main.css
+++ b/css/main.css
@@ -125,8 +125,9 @@ h3,
 h4{
   font-family: 'Poppins', sans-serif;
   font-size: 1.125em;
-  margin: 20px 0;
   font-weight: normal;
+  margin: 30px 0 20px 0;
+
 
 }
 
@@ -208,7 +209,7 @@ header nav{
   flex-flow: row wrap;
   width: 60%;
   font-size: 1.125em;
-  font-weight: normal;
+  font-weight: 500;
   text-transform: uppercase;
 
 }
@@ -217,13 +218,14 @@ header nav ul{
   display: flex;
   justify-content: space-around;
   width: 100%;
+  padding-left: 0;
+  margin: 0;
 
   
 }
 
 header nav ul li{
   font-size: 1.125em;
-  font-weight: 500;
 
 }
 
@@ -392,8 +394,8 @@ input[type=button]{
 }
 
 .reviews h2{
-  margin-bottom: 40px;
   line-height: 1;
+  margin: 50px 0 30px 0;
 
 }
 
